Add all forms with completed steps.

--- a/frontend/src/css/modules/challenge-create-using-ui.scss
+++ b/frontend/src/css/modules/challenge-create-using-ui.scss
@@ -30,3 +30,19 @@
 .md-tooltip {
 	width: auto;
 }
+
+.btn-floating:hover {
+	background-color: #ffaf4b !important;
+}
+
+.btn-floating {
+	background-color: #ffaf4b !important;
+}
+
+.add-margin-bottom {
+	margin-bottom: 40px;
+}
+
+.rm-padding {
+	padding: 0;
+}
