--- a/frontend/src/css/modules/challenge-create-using-ui.scss
+++ b/frontend/src/css/modules/challenge-create-using-ui.scss
@@ -46,3 +46,15 @@
 .rm-padding {
 	padding: 0;
 }
+
+.cross {
+	z-index: 6000;
+	height: 40px;
+	width: 40px;
+	position: fixed;
+	right: 10px;
+	margin-top: 7px;
+	cursor: pointer;
+	border: 2px solid #9d9d9d;
+	border-radius: 50%;
+}
